--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1",
-    "request": "^2.88.0",
-    "handlebars": ">=4.3.0"
+    "request": "^2.88.0"
   }
 }
